--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   camera-controls touch-action="pan-y"
   skybox-image="./mobile-phone-1875813-1920_ver_1.jpg"  
   alt="A 3D model of a sphere reflecting a sunrise" 
-  src="./reflective-sphere.gltf" ios-src="./reflective-sphere.usdz>
+  src="./reflective-sphere.gltf" ios-src="./reflective-sphere.usdz">
 
     <div id="error" class="hide">AR is not supported on this device</div>
     <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
