--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <model-viewer 
   ar ar-modes="scene-viewer webxr"
   camera-controls touch-action="pan-y"
+  environment-image="./mobile-phone-1875813-1920-ver-1.hdr"
   skybox-image="./mobile-phone-1875813-1920_ver_1.jpg"  
   alt="A 3D model of a sphere reflecting a sunrise" 
   src="./reflective-sphere.gltf" ios-src="./scene.usdz">
