--- a/index.html
+++ b/index.html
@@ -20,19 +20,16 @@
   </button>
 -->
 <model-viewer 
-src="./reflective-sphere.gltf" ios-src="./scene.usdz"
+src="./reflective-sphere.gltf" 
 ar ar-modes="webxr scene-viewer quick-look" 
-camera-controls poster="./poster.webp" 
+camera-controls poster="poster.webp" 
 shadow-intensity="1" 
-
-auto-rotate camera-target="0m 0m 0m">
-
-<div id="error" class="hide">AR is not supported on this device</div>
-<button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
-  👋 Activate AR
-</button>
+environment-image="./mobile-phone-1875813-1920-ver-1.hdr" auto-rotate camera-target="0m 0m 0m">
+  <div class="progress-bar hide" slot="progress-bar">
+      <div class="update-bar"></div>
+  </div>
   </model-viewer>
- 
+
 </div>
   <script>
     document.querySelector("#model-viewer").addEventListener('ar-status', (event) => {
