--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
       👋 Activate AR
   </button>
 -->
-<model-viewer 
-src="./reflective-sphere.gltf" 
-ar ar-modes="webxr scene-viewer quick-look" 
-camera-controls poster="poster.webp" 
-shadow-intensity="1" 
-environment-image="./mobile-phone-1875813-1920-ver-1.hdr" auto-rotate camera-target="0m 0m 0m">
-  <div class="progress-bar hide" slot="progress-bar">
-      <div class="update-bar"></div>
-  </div>
   </model-viewer>
+  <model-viewer 
+  ar ar-modes="scene-viewer webxr"
+  camera-controls touch-action="pan-y"
+  
+  alt="A 3D model of a sphere reflecting a sunrise" 
+  src="./scene.glb" >
 
+    <div id="error" class="hide">AR is not supported on this device</div>
+    <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+      👋 Activate AR
+  </button>
+  </model-viewer>
 </div>
   <script>
     document.querySelector("#model-viewer").addEventListener('ar-status', (event) => {
