--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
+  <link type="text/css" href="./styles.css" rel="stylesheet"/>
 
 </head>
 
@@ -27,7 +28,7 @@
   alt="A 3D model of a sphere reflecting a sunrise" 
   src="./scene.glb" 
 
-  ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1" auto-rotate environment-image="legacy">
+  ar ar-modes="scene-viewer webxr quick-look" camera-controls  shadow-intensity="1" auto-rotate environment-image="legacy">
   <div class="progress-bar hide" slot="progress-bar">
       <div class="update-bar"></div>
   </div>
