--- a/index.html
+++ b/index.html
@@ -13,63 +13,21 @@
 </head>
 
 <body>
-  <div style="width: 100vw; height: 100vh;">
-  <!--<model-viewer id="model-viewer" src="/M08.glb" ar ar-modes="scene-viewer webxr" camera-controls touch-action="pan-y" alt="A 3D model of an astronaut" skybox-image="./aircraft_workshop_01_1k.hdr" ios-src="./M08.usdz">
-    <div id="error" class="hide">AR is not supported on this device</div>
-    <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
-      👋 Activate AR
-  </button>
--->
-  </model-viewer>
-  <model-viewer 
- 
-  camera-controls touch-action="pan-y"
-  
-  alt="A 3D model of a sphere reflecting a sunrise" 
-  src="./scene.glb" 
-
-  ar ar-modes="scene-viewer webxr quick-look" camera-controls  shadow-intensity="1" auto-rotate environment-image="legacy">
-  <div class="progress-bar hide" slot="progress-bar">
-      <div class="update-bar"></div>
-  </div>
-  <button slot="ar-button" id="ar-button">
-      View in your space
-  </button>
-  <div id="ar-prompt">
-      <img src="ar_hand_prompt.png">
-  </div>
-  </model-viewer>
-</div>
-  <script>
-    document.querySelector("#model-viewer").addEventListener('ar-status', (event) => {
-      if(event.detail.status === 'failed'){
-        const error = document.querySelector("#error");
-        error.classList.remove('hide');
-        error.addEventListener('transitionend',(event) => {
-          error.classList.add('hide');
-        });
-      }
-    });
-  
-  </script>
-  <style>
-    #error {
-      background-color: #ffffffdd;
-      border-radius: 16px;
-      padding: 16px;
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate3d(-50%, -50%, 0);
-      transition: opacity 0.3s;
-    }
-    #error.hide {
-      opacity: 0;
-      visibility: hidden;
-      transition: visibility 2s, opacity 1s 1s;
-    }
-  </style>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <!-- <model-viewer> HTML element -->
+  <model-viewer ios-src="/model.usdz" src="/scene.glb" 
+  ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1" auto-rotate environment-image="legacy">
+    <div class="progress-bar hide" slot="progress-bar">
+        <div class="update-bar"></div>
+    </div>
+    <button slot="ar-button" id="ar-button">
+        View in your space
+    </button>
+    <div id="ar-prompt">
+        <img src="ar_hand_prompt.png">
+    </div>
+  </model-viewer>  
+  <script src="script.js"></script>
+  <!-- Loads <model-viewer> for browsers: -->
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
 </body>
-
 </html>
