--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- <model-viewer> HTML element -->
   <model-viewer src="/scene.glb" 
-  ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1" auto-rotate environment-image="legacy">
+  ar ar-modes="scene-viewer webxr quick-look" camera-controls  shadow-intensity="1" auto-rotate environment-image="legacy">
     <div class="progress-bar hide" slot="progress-bar">
         <div class="update-bar"></div>
     </div>
